render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__exports_text_with_solid_outer_stroke.snap
---
source: src/render/svg/tests.rs
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="572" height="252" viewBox="0 0 572 252"><defs><style type="text/css"><![CDATA[@font-face{font-family:"Source Sans Pro";font-style:normal;font-weight:400;src:url("fonts/sourcesanspro-regular.ttf") format("truetype");}]]></style><mask id="tmask0" maskUnits="userSpaceOnUse">
	<rect fill="white" transform="translate(6 6)" x="-100000" y="-100000" width="200000" height="200000"/>
	<text transform="translate(6 6)" font-size="200" font-family="Source Sans Pro" x="0, 130.37109, 263.08594, 360.83984" y="181">
			HOLA
	</text>
</mask></defs>
	<text fill="#E17FDA" transform="translate(6 6)" font-size="200" font-family="Source Sans Pro" x="0, 130.37109, 263.08594, 360.83984" y="181">
			HOLA
	</text>
<g mask="url(#tmask0)">
	<defs/>
	<text fill="none" stroke="blue" stroke-width="12" stroke-miterlimit="4" transform="translate(6 6)" font-size="200" font-family="Source Sans Pro" x="0, 130.37109, 263.08594, 360.83984" y="181">
			HOLA
	</text>
</g></svg>
